added german and english language support

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Studien-App</title>
+    <title>Study-App</title>
   </head>
   <body>
   <div id="root"></div>
